basic help page documentation

--- a/contrail/frontend/apps/contrailsite/static/css/sidebar.css
+++ b/contrail/frontend/apps/contrailsite/static/css/sidebar.css
@@ -319,6 +319,10 @@ a.article:hover {
     width: 100%;
 }
 
+.links {
+  display: flex;
+  flex-direction: column;
+}
 
 /* ---------------------------------------------------
     MEDIAQUERIES
