Link to storage page

--- a/contrail/frontend/apps/contrailsite/templates/base.html
+++ b/contrail/frontend/apps/contrailsite/templates/base.html
@@ -56,6 +56,9 @@
             <a class="nav-link js-scroll-trigger" href="{% url "price" %}" style="color:#00948c;">Get Prices</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url "storage" %}">Cloud Storage</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url "help" %}">Help</a>
           </li>
         </ul>
