--- a/contrail/frontend/apps/contrailsite/templates/help.html
+++ b/contrail/frontend/apps/contrailsite/templates/help.html
@@ -16,14 +16,23 @@
   <nav id="sidebar">
       <div class="sidenav">
         <a href="#about" class="col-form-label ">About</a>
-        <a href="#quickstart" class="col-form-label dropdown" <i class="fa fa-caret-right"></i> Quick Start </a>
+        <a href="#quickstart" class="col-form-label dropdown"> <i class="fa fa-caret-right"></i> Quick Start </a>
         <div class="dropdown-content">
           <a href="#getprices" class="col-form-label ">Get Prices</a>
           <a href="#sortprices" class="col-form-label ">Sort Prices</a>
           <a href="#compareprices" class="col-form-label ">Compare Prices</a>
         </div>
-        <a href="#providers" class="col-form-label ">Cloud Providers</a>
-        <a href="#plans" class="col-form-label ">Payment Plans</a>
+        <a href="#providers" class="col-form-label dropdown"> <i class="fa fa-caret-right"></i> Cloud Providers</a>
+        <div class="dropdown-content">
+          <a href="#aws" class="col-form-label ">AWS</a>
+          <a href="#azure" class="col-form-label ">MS Azure</a>
+        </div>
+        <a href="#payment" class="col-form-label dropdown"> <i class="fa fa-caret-right"></i> Payment Plans</a>
+        <div class="dropdown-content">
+          <a href="#ondemand" class="col-form-label ">On-Demand</a>
+          <a href="#reserved" class="col-form-label ">Reserved</a>
+          <a href="#spot" class="col-form-label ">Spot</a>
+        </div>
         <a href="#features" class="col-form-label ">Features</a>
         <a href="#github" class="col-form-label ">GitHub</a>
       </div>
@@ -34,7 +43,12 @@
 
       <div id="about">
         <h2>What is Contrail?</h2>
-        Contrail tracks cloud prices by pulling pricing data into a data warehouse to be able to answer common questions about pricing. Users can compare VM prices across multiple regions and cloud providers, compare payment options, and track the cost of a particular VM over time. Users can also track the change of pricing when changing a VM’s characteristics, such as increasing network bandwidth, doubling RAM, etc.
+        Contrail tracks cloud prices by pulling virtual machine pricing data from AWS and MS Azure into a data warehouse to be able to answer common questions about VM pricing. Users can compare VM prices across multiple regions and cloud providers, compare payment options, and track the cost of a particular VM over time. Users can also track the change of pricing when changing a VM’s characteristics, such as increasing network bandwidth, doubling RAM, etc.
+
+        <br><br><br>
+
+        <h3> Now, what is a virtual machine? </h3>
+        A virtual machine (VM) is a computer file that behaves like an actual computer. It gives you the flexibility of virtualization without having to buy and maintain the physical hardware that runs it, while being sandboxed from the rest of your system. This creates an ideal environment for testing other operating systems such as beta releases, accessing virus-infected data, creating backups, running software on operating systems it wasn’t designed for, and running applications that require a greater computing capacity. Each VM has its own virtual hardware, and multiple VMs can run concurrently on the same physical computer.
 
         <br><br><br>
 
@@ -104,23 +118,147 @@
       <br><br><br>
 
       <div id="providers">
-        <h3>Cloud Providers</h3>
-        As of right now, Contrail pulls pricing data of instances from both AWS and MS Azure.
+        <h2>Cloud Providers</h2>
+        As of right now, Contrail pulls pricing data of VMs from both AWS and MS Azure.
 
-        <div>
-          <a href="https://aws.amazon.com/ec2/">AWS EC2</a>
-          <ul>
-            <li><a href="https://aws.amazon.com/ec2/pricing/">Pricing</a></li>
-          </ul>
+        <br><br><br>
+
+        <div id="aws">
+          <h3> AWS </h3>
+          Amazon Web Services is a subsidiary of Amazon that provides on-demand cloud computing platforms on a pay-as-you-go basis. It’s the world’s most comprehensive and broadly adopted cloud platform, offering over 165 fully featured services (over 40 of which that aren’t available anywhere else) from data centers globally. AWS has the largest, most dynamic ecosystem and is architected to be the most flexible and secure cloud computing environment available today.
+          <br><br>
+          <h4> Amazon EC2 </h4>
+          Amazon EC2 (Elastic Compute Cloud) is a web service providing secure, resizable, compute capacity in the cloud. It’s benefits include elastic web-scale computing, complete control of the EC2 instances, flexible cloud hosting services, integration with most other AWS services, reliability, and robust security. Inexpensive purchasing options are also available and it’s easy to get started!
+          <br>
+          Learn more about <a href="https://aws.amazon.com/"> AWS</a>, <a href="https://aws.amazon.com/ec2/">Amazon EC2</a>, and <a href="https://aws.amazon.com/ec2/pricing/"> Amazon EC2 pricing</a>.
         </div>
 
-        <div>
-          <a href="https://azure.microsoft.com/en-us/services/virtual-machines/">MS Azure</a>
-          <ul>
-            <li><a href="https://azure.microsoft.com/en-us/pricing/details/virtual-machines/linux/">Pricing for Linux</a></li>
-            <li><a href="https://azure.microsoft.com/en-us/pricing/details/virtual-machines/windows/">Pricing for Windows</a></li>
-          </ul>
+        <br><br>
+
+        <div id="azure">
+          <h3> MS Azure </h3>
+          Microsoft Azure is an ever-expanding set of cloud computing service created by Microsoft for building, testing, deploying, and managing applications and services through Microsoft-managed data centers. It prides itself on being the only consistent hybrid cloud on the market, and is extremely productive, intelligent, and trusted. MS Azure has the largest portfolio in the industry, with more global regions than any cloud provider and markets their services as the cloud for all that finds answers to any business challenge with a scalable, cost-effective solution.
+          <br><br>
+          <h4> Azure VM </h4>
+          Azure VM is an on-demand, scalable computing resource that gives you the flexibility of virtualization while keeping your budget in check with low-cost, per-second billing where you only pay for the compute time you use. It has the capacity to scale from one to thousands of VM instances in minutes, and provides you with recommendations for high availability, security, performance for all your VMs with other services provided in Azure.
+          <br>
+          Learn more about <a href="https://azure.microsoft.com/en-us/"> MS Azure</a>, <a href="https://azure.microsoft.com/en-us/services/virtual-machines/">Azure VM</a>, and <a href="https://azure.microsoft.com/en-us/pricing/details/virtual-machines/"> Azure VM pricing</a>.
         </div>
+
+      </div>
+
+      <br><br><br>
+
+      <div id="payment">
+        <h2>Payment Plans</h2>
+        <br><br>
+
+        <div id="ondemand">
+          <h3> On Demand Pricing </h3>
+          On-Demand pricing lets you pay for compute capacity by the hour or second with no long-term commitments or upfront payments. This allows you to increase or decrease your compute capacity depending on the demands of your application and relieves you from the costs and complexities of planning, purchasing, and maintaining hardware. As a result, this transforms the generally large fixed costs into smaller variable costs as you only pay for what you use.
+          <br>
+          *MS Azure uses the term “Pay as you go” for On-Demand pricing but for standardization purposes, we generalize to On-Demand.
+          <br><br>
+          <h4> Recommended for: </h4>
+            <ul>
+              <li>
+                Users who prefer low cost and flexibility of VMs without any up-front payment or long-term commitment.
+              </li>
+              <li>
+                Applications with short-term, spiky, or unpredictable workloads that cannot be interrupted.
+              </li>
+              <li>
+                Applications being developed or tested on VMs for the first time.
+              </li>
+            </ul>
+          </div>
+
+        <br><br>
+
+        <div id="reserved">
+          <h3> Reserved Pricing </h3>
+          Reserved pricing provides you with significant discounts (amount varies by provider) in comparison to On-Demand pricing by pre-paying for either 1-year or 3-year terms of VMs, which allows you to get a discount on the resources you use in both AWS and MS Azure.
+          <br>
+          Specifically in AWS you have the choice between a Standard or Convertible Reserved pricing. With Standard Reserved pricing, you can receive up to a 75% discount and have the flexibility to alter the Availability Zones, instance sizes, and networking types. Convertible Reserved pricing allows you to have further flexibility, such as having the capacity to use different instance families or operating systems, and provides up to a 54% discount. Additionally with either of those reservations, you can choose to pay with either All Upfront, Partial Upfront, or No Upfront payments. The All Upfront option requires you to pay for the entire Reserved term with one payment, and provides you with the largest discount compared to On-Demand pricing. With Partial Upfront, you are required to pay a low upfront payment and then charged a discounted hourly rate for the VM of your choice for the duration of the Reserved term. With the No Upfront option, no upfront payment is required and a discounted hourly rate is charged for the entire duration of the Reserved term.
+          <br><br>
+          <h4> Recommended for: </h4>
+            <ul>
+              <li>
+                Applications with steady state usage.
+              </li>
+              <li>
+                Applications that may require reserved capacity.
+              </li>
+              <li>
+                Customers who want budget predictability and minimize risk.
+              </li>
+              <li>
+                Customers that can commit to using a VM over a 1-year or 3-year term to reduce their total computing costs.
+              </li>
+            </ul>
+          </div>
+
+        <br><br>
+
+        <div id="spot">
+          <h3> Spot Pricing </h3>
+          Spot pricing allows you to bid for unused capacity in a cloud provider’s data center. The prices are set by the cloud provider and adjusted gradually based on long-term trends in supply and demand for Spot VM capacity. You pay the Spot price that’s in effect for the time period your Vs are running, and can save up a significant amount when compared to On-Demand pricing, but if someone else bids higher than you, your VM will be taken away. With AWS Spot VMs can also run for a predefined duration (hourly increments up to 6 hours) with a discount of up to 30 - 50% compared to On-Demand pricing. VMs in MS Azure are billed per-second rounded down to the last minute.
+          <br>
+          *MS Azure uses the term “low-priority” VMs for Spot pricing but for standardization purposes, we generalize to Spot.
+          <br><br>
+          <h4> Recommended for: </h4>
+            <ul>
+              <li>
+                Applications that have flexible start and end times.
+              </li>
+              <li>
+                Applications that are only feasible at very low compute prices.
+              </li>
+              <li>
+                Users with urgent computing needs for large amounts of additional capacity.
+              </li>
+              <li>
+                Large-scale solutions that are in development.
+              </li>
+              <li>
+                Large-scale load testing and regression testing.
+              </li>
+              <li>
+                Supplement regular dedicated VMs (when available, jobs can scale and complete quicker for lower cost and when unavailable, the baseline of dedicated VMs remain).
+              </li>
+            </ul>
+          </div>
+
+      </div>
+
+      <br><br><br>
+
+      <div id="features">
+        <h2>Features</h2>
+
+        <br><br>
+
+        <h3> Find Prices </h3>
+        <br><br>
+        <h3> Compare Prices </h3>
+        <br><br>
+        <h3> Detailed Instance Page </h3>
+        <br><br>
+        <h3> Cloud Storage </h3>
+
+      </div>
+
+      <br><br><br>
+
+      <div id="github">
+        <h2>Github</h2>
+        This is an open source project on Github, it can be found <a href="https://github.com/joshuaprince/Contrail"> here</a>.
+
+        <br><br>
+
+        <h3> Moving forward </h3>
+        We have developed the software to support tracking any number of further cloud providers. While Amazon Web Services and Azure are the two largest cloud providers, we want to include Google Cloud Platform instances in our database and frontend, as well as any smaller providers.
+
       </div>
 
       <br><br><br>
