--- a/contrail/frontend/apps/contrailsite/templates/help.html
+++ b/contrail/frontend/apps/contrailsite/templates/help.html
@@ -54,7 +54,7 @@
           </div>
           <div class="col">
             <br>
-  					<img src="../static/img/homepage.png" class="contrailhome">
+  					<img src="{% static 'img/homepage.png" class="contrailhome">
   			  </div>
 				</div>
 
@@ -91,7 +91,7 @@
               <p>
                 Navigate to the tab <a href="list.html">Get Prices</a> or click on the designated Get Prices button on our <a href="home.html">home page</a>.
               </p>
-              <img src="../static/img/clickhome.png" class="pics">
+              <img src="{% static 'img/clickhome.png' %}" class="pics">
             </li>
             <li>
               <p>
@@ -105,7 +105,7 @@
               <p>
                 Click on a particular instance type to be led to a detailed instance page depicting payment plans, pricing over time, and etc.
               </p>
-              <img src="../static/img/clickinstance.png" class="pics">
+              <img src="{% static 'img/clickinstance.png' %}" class="pics">
             </li>
           </ol>
         </div>
@@ -142,8 +142,8 @@
               <p>
                 Click on any of the column heading tabs to sort the results by the chosen category.
               </p>
-              <img src="../static/img/sort.png" class="pics">
-              <img src="../static/img/sorted.png" class="pics">
+              <img src="{% static 'img/sort.png' %}" class="pics">
+              <img src="{% static 'img/sorted.png' %}" class="pics">
             </li>
             <li>
               <p>
@@ -154,13 +154,13 @@
               <p>
                 Adjust the number of entries shown per page above the top left corner of the table.
               </p>
-              <img src="../static/img/clickentries.png" class="pics">
+              <img src="{% static 'img/clickentries.png' %}" class="pics">
             </li>
             <li>
               <p>
                 Search for a specific VM instance or for any keywords by using the search bar located above the top right side of the table.
               </p>
-              <img src="../static/img/clicksearch.png" class="pics">
+              <img src="{% static 'img/clicksearch.png' %}" class="pics">
             </li>
           </ol>
         </div>
@@ -174,19 +174,19 @@
               <p>
                 To compare prices of certain instances, check any of the boxes to the left of the instance rows on the table. You may select up to 3 instances to be compared.
               </p>
-              <img src="../static/img/selection.png" class="pics">
+              <img src="{% static 'img/selection.png' %}" class="pics">
             </li>
             <li>
               <p>
                 Once you’re satisfied with your selection, click on the “Compare” button to the bottom left corner of the table.
               </p>
-              <img src="../static/img/clickcompare.png" class="pics">
+              <img src="{% static 'img/clickcompare.png' %}" class="pics">
             </li>
             <li>
               <p>
                 This leads to a pop-up of a closer comparison chart of the specified instances.
               </p>
-              <img src="../static/img/compareresults.png" class="pics">
+              <img src="{% static 'img/compareresults.png' %}" class="pics">
             </li>
           </ol>
         </div>
@@ -414,7 +414,7 @@
           Clicking on any of the column headings will sort the results in according to that category.
         </p>
 
-        <img src="../static/img/resultstable.png" class="pics">
+        <img src="{% static 'img/resultstable.png' %}" class="pics">
 
         <br><br>
 
@@ -423,7 +423,7 @@
           In order to compare prices of certain VMs in a more readable manner, the compare button allows you to choose up to three VMs of your choice and view them in a separate table.
         </p>
 
-        <img src="../static/img/compareresults.png" class="pics">
+        <img src="{% static 'img/compareresults.png' %}" class="pics">
 
         <br><br>
 
@@ -432,9 +432,9 @@
           To view more detailed information about a particular VM, click on the instance type to be led to a detailed page that shows information about the different payment plans available and specifications about the instance such as SKU, clock speed, and instance family. The bottom of the page includes a graph showing the pricing trends for the instance with the different payment options. You can toggle the options to view only one to all payment options.
         </p>
 
-        <img src="../static/img/instancedetail.png" class="pics">
-        <img src="../static/img/instancepayment.png" class="pics">
-        <img src="../static/img/instancegraph.png" class="pics">
+        <img src="{% static 'img/instancedetail.png' %}" class="pics">
+        <img src="{% static 'img/instancepayment.png' %}" class="pics">
+        <img src="{% static 'img/instancegraph.png' %}" class="pics">
 
         <br><br>
 
@@ -469,7 +469,7 @@
 
         <div class="row">
           <div class="col">
-  					<img src="../static/img/rhodges-photo.jpg" id="teamimg">
+  					<img src="{% static 'img/rhodges-photo.jpg' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h4> Robert Hodges </h4>
@@ -483,12 +483,12 @@
 
         <div class="row">
           <div class="col">
-  					<img src="../static/img/amazon.png" id="teamimg">
+  					<img src="{% static 'img/jingwen.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h4> Jingwen Low </h4>
             <p>
-              Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+              Jingwen is a 4th year UC Davis Computer Science and Engineering student. She is also currently works as a full stack developer at ASUCD Creative Media.
             </p>
           </div>
 				</div>
@@ -497,7 +497,7 @@
 
         <div class="row">
           <div class="col">
-  					<img src="../static/img/amazon.png" id="teamimg">
+  					<img src="{% static 'img/amazon.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h4> Joshua Prince </h4>
@@ -511,7 +511,7 @@
 
         <div class="row">
           <div class="col">
-  					<img src="../static/img/monisha.png" id="teamimg">
+  					<img src="{% static 'img/monisha.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h4> Monisha Ravindar </h4>
@@ -525,7 +525,7 @@
 
         <div class="row">
           <div class="col">
-  					<img src="../static/img/amazon.png" id="teamimg">
+  					<img src="{% static 'img/amazon.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h4> Rishi Dutta </h4>
