--- a/contrail/frontend/apps/contrailsite/templates/base.html
+++ b/contrail/frontend/apps/contrailsite/templates/base.html
@@ -61,6 +61,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url "help" %}">Help</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url "aboutus" %}">About Us</a>
+          </li>
         </ul>
       </div>
     </div>
