update about us page

--- a/contrail/frontend/apps/contrailsite/templates/about.html
+++ b/contrail/frontend/apps/contrailsite/templates/about.html
@@ -50,12 +50,12 @@
 
         <div class="row">
           <div class="col">
-  					<img src="{% static 'img/amazon.png' %}" id="teamimg">
+  					<img src="{% static 'img/josh.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h5> Joshua Prince </h5>
             <p>
-              Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+              Josh is a graduating senior in computer science and engineering at UC Davis. He’s been interested in web design since elementary school and started programming in middle school and greatly looks forward to creating more projects that he can use to make people’s work easier and more enjoyable.
             </p>
           </div>
 				</div>
@@ -69,7 +69,7 @@
           <div class="coldescription">
             <h5> Monisha Ravindar </h5>
             <p>
-              Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+              Monisha is a senior at UC Davis, graduating with a major in Computer Science and Engineering and a minor in Psychology. She’s passionate about human-centered design and developing her multidisciplinary skills while coding away at projects aimed towards creating a positive impact on society.
             </p>
           </div>
 				</div>
@@ -78,12 +78,12 @@
 
         <div class="row">
           <div class="col">
-  					<img src="{% static 'img/amazon.png' %}" id="teamimg">
+  					<img src="{% static 'img/rishi.png' %}" id="teamimg">
   			  </div>
           <div class="coldescription">
             <h5> Rishi Dutta </h5>
             <p>
-              Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+              Rishi is a 4th year UC Davis Computer Science and Engineering student. He has been involved in many extra curricular activities at Davis, such as HackDavis and #include. After graduation he is going to work as a software engineer at Workday.
             </p>
           </div>
 				</div>
