--- a/contrail/frontend/apps/contrailsite/templates/history_graph.html
+++ b/contrail/frontend/apps/contrailsite/templates/history_graph.html
@@ -1,18 +1,21 @@
+<div style="text-align: center">
+    <button id="hourly_scale" style="margin: 5px">
+      Hourly
+    </button>
+
+    <button id="daily_scale" style="margin: 5px">
+      Daily
+    </button>
+
+    <button id="monthly_scale" style="margin: 5px">
+      Monthly
+    </button>
+</div>
+
 <div>
   <canvas id="canvas" style="display: block; width: 621px; height: 310px;" width="621" height="310" class="chartjs-render-monitor"></canvas>
 </div>
 
-<button id="hourly_scale">
-  Hourly
-</button>
-
-<button id="daily_scale">
-  Daily
-</button>
-
-<button id="monthly_scale">
-  Monthly
-</button>
 
 <!-- CHART.JS -->
 <script>
@@ -252,15 +255,18 @@ var ctx = document.getElementById('canvas').getContext('2d');
 window.myLine = new Chart(ctx, config1);
 
 $("#hourly_scale").on("click", function() {
-    new Chart(ctx, config1);
+    window.myLine.destroy()
+    window.myLine = new Chart(ctx, config1);
   });
 
 $("#daily_scale").on("click", function() {
-    new Chart(ctx, config2);
+    window.myLine.destroy()
+    window.myLine = new Chart(ctx, config2);
   });
 
 $("#monthly_scale").on("click", function() {
-    new Chart(ctx, config3);
+    window.myLine.destroy()
+    window.myLine = new Chart(ctx, config3);
   });
 
 </script>
