added links to rishi about us page

--- a/contrail/frontend/apps/contrailsite/templates/about.html
+++ b/contrail/frontend/apps/contrailsite/templates/about.html
@@ -83,7 +83,7 @@
           <div class="coldescription">
             <h5> Rishi Dutta </h5>
             <p>
-              Rishi is a 4th year UC Davis Computer Science and Engineering student. He has been involved in many extra curricular activities at Davis, such as HackDavis and #include. After graduation he is going to work as a software engineer at Workday.
+              Rishi is a 4th year UC Davis Computer Science and Engineering student. He has been involved in many extra curricular activities at Davis, such as <a class="text-info" href="https://hackdavis.io/" target="_blank"> HackDavis </a> and <a class="text-info" href="http://include-davis.herokuapp.com/" target="_blank"> #include</a>. After graduation he is going to work as a software engineer at Workday.
             </p>
           </div>
 				</div>
