graph button styling

--- a/contrail/frontend/apps/contrailsite/static/css/sidebar.css
+++ b/contrail/frontend/apps/contrailsite/static/css/sidebar.css
@@ -172,6 +172,10 @@ a.article:hover {
   font-size: inherit;
 }
 
+.small {
+  padding: 0;
+}
+
 /* The container */
 .checkbox-container {
   display: block;
