--- a/contrail/frontend/apps/contrailsite/templates/help.html
+++ b/contrail/frontend/apps/contrailsite/templates/help.html
@@ -112,7 +112,7 @@
             </li>
             <li>
               <p>
-                Use Shift+click to select multiple regions.
+                Use Shift+command on Linux or Shift+ctrl on Windows to select multiple regions and Shift+click to select multiple regions in a row.
                 <img src="{% static 'img/multiselect.gif' %}" class="pics">
               </p>
             </li>
