--- a/contrail/frontend/apps/contrailsite/templates/home.html
+++ b/contrail/frontend/apps/contrailsite/templates/home.html
@@ -105,7 +105,7 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Test out different payment types to see what’s right for you.</h4>
+                <h4 class="text-white">Compare the prices of cloud storage in a centralized space.</h4>
                 <!-- <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p> -->
                 <hr class="d-none d-lg-block mb-0 mr-0"><br>
                 <a href="{% url "price" %}" class="btn btn-primary js-scroll-trigger">Get prices</a>
