--- a/contrail/frontend/apps/contrailsite/templates/history_graph.html
+++ b/contrail/frontend/apps/contrailsite/templates/history_graph.html
@@ -1,13 +1,15 @@
 <div style="text-align: center">
-    <button id="hourly_scale" style="margin: 5px">
+    <button id="hourly_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
       Hourly
     </button>
-
-    <button id="daily_scale" style="margin: 5px">
+    &nbsp;
+    &nbsp;
+    <button id="daily_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
       Daily
     </button>
-
-    <button id="monthly_scale" style="margin: 5px">
+    &nbsp;
+    &nbsp;
+    <button id="monthly_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
       Monthly
     </button>
 </div>
