--- a/contrail/frontend/apps/contrailsite/templates/instance.html
+++ b/contrail/frontend/apps/contrailsite/templates/instance.html
@@ -35,6 +35,7 @@
           {% else %}
           <div class="col-sm-6">
           {% endif %}
+          {% if currentPrices.onDemand.pricePerHour %}
             <div class="card">
               <div class="card-body">
                 <h4 class="card-title">On Demand</h4><hr>
@@ -42,6 +43,7 @@
                 <p class="card-text">{{ currentPrices.onDemand.pricePerHour|hourly_to_monthly }} per month</p>
               </div>
             </div>
+          {% endif %}
           </div>
 
 
@@ -60,26 +62,42 @@
                   <a data-toggle="collapse" href="#one" aria-expanded="false" aria-controls="one"><h5>One Year &#x2C5;</h5></a>
                   <div class="collapse multi-collapse" id="one">
                     <div class="card card-body">
+                      {% if currentPrices.reserved1yrFullUpfront.priceUpfront %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved1yrFullUpfront.priceUpfront|price }}</span> up front</h5>
-                      <p class="card-text">Full Upfront</p><hr style="margin-top: 0px;">
+                      <p class="card-text">Full Upfront</p>
+                      <hr style="margin-top: 0px;">
+                      {% endif %}
+                      {% if currentPrices.reserved1yrPartialUpfront.priceUpfront and currentPrices.reserved1yrPartialUpfront.pricePerHour %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved1yrPartialUpfront.priceUpfront|price }}</span> up front</h5>
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved1yrPartialUpfront.pricePerHour|price }}</span> per hour</h5>
-                      <p class="card-text">Partial Upfront</p><hr style="margin-top: 0px;">
+                      <p class="card-text">Partial Upfront</p>
+                      <hr style="margin-top: 0px;">
+                      {% endif %}
+                      {% if currentPrices.reserved1yrNoUpfront.pricePerHour %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved1yrNoUpfront.pricePerHour|price }}</span> per hour</h5>
                       <p class="card-text">No Upfront</p>
+                      {% endif %}
                     </div>
                   </div><br>
 
                   <a data-toggle="collapse" href="#three" aria-expanded="false" aria-controls="three"><h5>Three Years &#x2C5;</h5></a>
                   <div class="collapse multi-collapse" id="three">
                     <div class="card card-body">
+                      {% if currentPrices.reserved3yrFullUpfront.priceUpfront %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved3yrFullUpfront.priceUpfront|price }}</span> up front</h5>
-                      <p class="card-text">Full Upfront</p><hr style="margin-top: 0px;">
+                      <p class="card-text">Full Upfront</p>
+                      <hr style="margin-top: 0px;">
+                      {% endif %}
+                      {% if currentPrices.reserved3yrPartialUpfront.priceUpfront and currentPrices.reserved3yrPartialUpfront.pricePerHour %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved3yrPartialUpfront.priceUpfront|price }}</span> up front</h5>
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved3yrPartialUpfront.pricePerHour|price }}</span> per hour</h5>
-                      <p class="card-text">Partial Upfront</p><hr style="margin-top: 0px;">
+                      <p class="card-text">Partial Upfront</p>
+                      <hr style="margin-top: 0px;">
+                      {% endif %}
+                      {% if currentPrices.reserved3yrNoUpfront.pricePerHour %}
                       <h5 class="card-title"><span style="font-size: 1.2em;">{{ currentPrices.reserved3yrNoUpfront.pricePerHour|price }}</span> per hour</h5>
                       <p class="card-text">No Upfront</p>
+                      {% endif %}
                     </div>
                   </div><br>
 
