--- a/contrail/frontend/apps/contrailsite/templates/history_graph.html
+++ b/contrail/frontend/apps/contrailsite/templates/history_graph.html
@@ -1,15 +1,15 @@
 <div style="text-align: center">
-    <button id="hourly_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
+    <button id="hourly_scale" class="btn btn-primary" style="font-size:10px;padding:10px;">
       Hourly
     </button>
     &nbsp;
     &nbsp;
-    <button id="daily_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
+    <button id="daily_scale" class="btn btn-primary" style="font-size:10px;padding:10px;">
       Daily
     </button>
     &nbsp;
     &nbsp;
-    <button id="monthly_scale" class="btn btn-primary" style="font-size:0.5em;padding:10px;">
+    <button id="monthly_scale" class="btn btn-primary" style="font-size:10px;padding:10px;">
       Monthly
     </button>
 </div>
@@ -57,8 +57,8 @@
                 ],
             }, {
                 label: 'Hourly Reserved (1yr, no up front)',
-                backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
-                borderColor: window.chartColors.blue,
+                backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
+                borderColor: window.chartColors.purple,
                 fill: false,
                 data: [
                     {% for price in priceHistory.hourlyReserved1yrNoUpfront %}
@@ -130,8 +130,8 @@
                 ],
             }, {
                 label: 'Daily Reserved (1yr, no up front)',
-                backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
-                borderColor: window.chartColors.blue,
+                backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
+                borderColor: window.chartColors.purple,
                 fill: false,
                 data: [
                     {% for price in priceHistory.dailyReserved1yrNoUpfront %}
@@ -203,8 +203,8 @@
                 ],
             }, {
                 label: 'Monthly Reserved (1yr, no up front)',
-                backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
-                borderColor: window.chartColors.blue,
+                backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
+                borderColor: window.chartColors.purple,
                 fill: false,
                 data: [
                     {% for price in priceHistory.monthlyReserved1yrNoUpfront %}
